--- a/mouseEvent.html
+++ b/mouseEvent.html
@@ -3,15 +3,16 @@
 
 <head>
     <title>this is the title</title>
+    <link rel="stylesheet" type="text/css" href="mycssstyle.css">
 </head>
 
 <body>
     <h1>HEAD 1</h1>
     <p>my paragraph</p>
     <div id="myDiv" style="position:absolute; background:yellow;
-        left: 300; top: 100; width: 100; font-size: 52pt"
-        onmouseover="changeColor("red");"
-        onmouseout="changeColor("yellow");">
+        left:300px;top:100px;width:100px;font-size: 24px"
+        onmouseover="changeColor('red');"
+        onmouseout="changeColor('green');">
         Move your mouse over this...
         Move your mouse out this...
 
