--- a/shit.html
+++ b/shit.html
@@ -16,10 +16,7 @@
     </style>
 </head>
 
-<body id="theBody" onclick="console.log('shit')">
-    <p onclick="console.log('fuck')">you know that</p>
-    <object id="1" width="50px" height="50px" data="smile.svg" onclick="console.log('shit');" style="position: absolute; top:60px; left: 60px">yes</object>
-
+<body id="theBody" onload="show_pattern()">
     <script src="MyJS.js">
     </script>
 </body>
